- Finally worked when i renamed it to interest - renaming it back to interests.tsx - Fixed overflow issues using loading transitions - Added favicon.ico file

--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -116,10 +116,6 @@ body {
   }
 }
 
-.loading {
-  overflow: hidden;
-}
-
 .svg-white {
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg)
     brightness(200%) contrast(100%);
